--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "marked": "^15.0.11",
     "nuxt": "^3.17.1",
     "pinia": "^2.1.7",
-    "sass": "^1.87.0",
     "shadcn-vue": "^2.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "sass": "^1.87.0",
+    "sass-loader": "^16.0.5"
   }
 }
