--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "marked": "^15.0.11",
     "nuxt": "^3.17.1",
     "pinia": "^2.1.7",
+    "three": "^0.176.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
