--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nuxt": "^3.17.1",
     "pinia": "^2.1.7",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "sass": "^1.87.0",
