--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@pinia/nuxt": "^0.4.10",
     "bootstrap": "^5.3.0",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.5",
+    "isomorphic-dompurify": "^2.24.0",
     "lucide-vue-next": "^0.503.0",
     "marked": "^15.0.11",
     "nuxt": "^3.17.1",
