--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@iconify/vue": "^4.3.0",
     "@pinia/nuxt": "^0.4.10",
+    "@vueuse/core": "^13.2.0",
     "bootstrap": "^5.3.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.5",
@@ -20,8 +21,15 @@
     "marked": "^15.0.11",
     "nuxt": "^3.17.1",
     "pinia": "^2.1.7",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
+    "tippy.js": "^6.3.7",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
+    "vite-plugin-commonjs": "^0.10.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
+    "vue-router": "^4.5.1",
     "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
