--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "marked": "^15.0.11",
     "nuxt": "^3.17.1",
     "pinia": "^2.3.1",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
