--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^13.2.0",
     "bootstrap": "^5.3.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dompurify": "^3.2.5",
     "isomorphic-dompurify": "^2.24.0",
     "lucide-vue-next": "^0.503.0",
